--- a/dojo/html/englisch/vokabeltest/Quiz.html
+++ b/dojo/html/englisch/vokabeltest/Quiz.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/Quiz.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/QuizButtons.css">
     <title>Quiz</title>
 </head>
 <body>
