--- a/dojo/html/englisch/vokabeltest/QuizSolution.html
+++ b/dojo/html/englisch/vokabeltest/QuizSolution.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page title</title>
-      <link rel="stylesheet" type="text/css" href="css/Quiz.css">
+      <link rel="stylesheet" type="text/css" href="css/QuizEnd.css">
 </head>
 <body>
     
